# telematics-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  compose.yaml
.github/: git-commit-instructions.md
crates/galileosky-listener/: Cargo.toml
crates/galileosky-listener/debian/: galileosky-listener.service  listener.conf  preinst
crates/galileosky-listener/examples/: device_cmd_delivery.rs  device_head_packet.rs  device_main_packet.rs
crates/galileosky-listener/src/: commands.rs  crc.rs  main.rs  normalize.rs  protocol.rs  server.rs
crates/galileosky-listener/tests/: common.rs  crc.rs  normalize.rs  protocol.rs
crates/queclink-listener/: Cargo.toml
crates/queclink-listener/debian/: listener.conf  preinst  queclink-listener.service
crates/queclink-listener/examples/: device_cmd_delivery.rs  device_fri_report.rs  device_heartbeat.rs
crates/queclink-listener/src/: commands.rs  lib.rs  main.rs  normalize.rs  presence.rs  protocol.rs  server.rs
crates/queclink-listener/tests/: common.rs  normalize.rs  protocol.rs
crates/ruptela-listener/: Cargo.toml  Dockerfile  README.md  build-deb.sh
crates/ruptela-listener/debian/: listener.conf  preinst  ruptela-listener.service
crates/ruptela-listener/examples/: device_cmd_delivery.rs  device_extended_records.rs  device_records.rs  x01_test.rs  x44_test.rs
crates/ruptela-listener/src/: commands.rs  crc.rs  lib.rs  main.rs  normalize.rs  presence.rs  protocol.rs  server.rs
crates/ruptela-listener/tests/: common.rs  crc.rs  normalize.rs  protocol.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  normalize.rs  publisher.rs
crates/teltonika-listener/: Cargo.toml
crates/teltonika-listener/debian/: listener.conf  preinst  teltonika-listener.service
crates/teltonika-listener/examples/: device_cmd_delivery.rs  device_extended_records.rs  device_records.rs
crates/teltonika-listener/src/: commands.rs  crc.rs  lib.rs  main.rs  normalize.rs  presence.rs  protocol.rs  server.rs
crates/teltonika-listener/tests/: common.rs  crc.rs  normalize.rs  protocol.rs
