[package]
name = "queclink-listener"
version = "0.1.0"
edition = "2024"
authors = ["Jose Carrizales <jrafaelca@gmail.com>"]
description = "Async TCP listener for Queclink GPS devices — parses ASCII @Track protocol frames and publishes records to a Valkey stream"
license = "LicenseRef-proprietary"
publish = false

[package.metadata.deb]
maintainer = "Jose Carrizales <jrafaelca@gmail.com>"
copyright = "2025, Jose Carrizales"
section = "net"
priority = "optional"
assets = [
    ["target/release/queclink-listener", "usr/queclink/listener", "755"],
    ["debian/listener.conf", "etc/queclink/listener", "644"],
]
conf-files = ["/etc/queclink/listener"]
maintainer-scripts = "debian"
systemd-units = [{ unit-name = "queclink-listener", enable = true }]

[[example]]
name = "queclink_device_fri_report"
path = "examples/device_fri_report.rs"

[[example]]
name = "queclink_device_heartbeat"
path = "examples/device_heartbeat.rs"

[[example]]
name = "queclink_device_cmd_delivery"
path = "examples/device_cmd_delivery.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
